#+TITLE: AUCTeX NEWS -- History of notable and user-visible changes
#+AUTHOR: AUCTeX Maintenance Team
#+LANGUAGE: en
#+OPTIONS: num:nil toc:nil
#+LINK: ELPA https://elpa.gnu.org/packages/%s
# Copyright (C) 2024-2025 Free Software Foundation, Inc.
# License: GNU General Public License 3
# The format is based on [[https://keepachangelog.com/en/1.1.0/][Keep a Changelog]]

* [Unreleased]

** Changed

- AUCTeX now requires GNU Emacs 28.1 or higher.

** Fixed

- Fix unwanted expansion of abbrevs during filling when ~abbrev-mode~ is
  enabled.
- Fix the command-line options passed to latexmk when processing files
  with xetex in order to run the viewer correctly.
- Fix removing of stale verbatim entries in auto-parsed file once the
  corresponding package isn't used in the .tex file anymore.  Complete
  removal may require two invocations of =C-u C-c C-n=.

* [14.0.9] - 2025-02-25

** Added

- Add new support files =style/csthm.el=, =style/elsarticle.el=,
  =style/enumerate.el=, =style/keytheorems.el= and
  =style/marginalia.el=.

* [14.0.8] - 2024-12-11

** Added

- Improve support for folding of citations macros.  The current folding
  =[c]= is changed to a more descriptive version, using author names and
  publication years, like =[Ne21]= or =[ABC99]=.  These are extracted
  from any bib files referenced in the document or specified by the user
  option ~TeX-fold-bib-file~.

- Add support for folding of =\begin{env}= and =\end{env}= macros.  The
  replacement specifiers are controlled by the custom option
  ~TeX-fold-begin-end-spec-list~.

- Add new custom option ~TeX-fold-alert-color~ which determines the
  color used when folding the ~\alert~ macro, defaults to ~red~.

- Add new support files =style/glossaries-extra.el=,
  =style/glossaries.el=, =style/inlinegraphicx.el=, =style/minted2.el=
  (=style/minted.el= is updated to package v3.1.2) and
  =style/stocksize.el=.

- Add preliminary support for parsing =\graphicspath= in
  =style/graphicx.el=.

** Changed
